--- a/Nesine Futbol Maçı Verileri/docker-compose.yml
+++ b/Nesine Futbol Maçı Verileri/docker-compose.yml
@@ -1,6 +1,11 @@
 # ─────────────────────────────────────────────────────────────────
 # 🐳 Nesine Futbol Tahmin Sistemi — Docker Compose
 # Servisler: PostgreSQL (db) + Tahmin Uygulaması (app)
+#
+# Kullanım:
+#   1. .env.example dosyasını .env olarak kopyalayın
+#   2. .env içindeki POSTGRES_PASSWORD değerini değiştirin
+#   3. docker compose up -d
 # ─────────────────────────────────────────────────────────────────
 
 services:
@@ -9,17 +14,15 @@ services:
     image: postgres:16-alpine
     container_name: nesine_postgres
     restart: unless-stopped
+    env_file: .env
     environment:
-      POSTGRES_USER: nesine_user
-      POSTGRES_PASSWORD: nesine_secure_pass_2024
-      POSTGRES_DB: nesine_futbol
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U nesine_user -d nesine_futbol"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-nesine_user} -d ${POSTGRES_DB:-nesine_futbol}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -35,13 +38,9 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    env_file: .env
     environment:
-      # PostgreSQL bağlantı bilgileri
-      POSTGRES_USER: nesine_user
-      POSTGRES_PASSWORD: nesine_secure_pass_2024
       POSTGRES_HOST: db
-      POSTGRES_PORT: "5432"
-      POSTGRES_DB: nesine_futbol
       # Chrome headless ayarları
       CHROME_BIN: /usr/bin/google-chrome-stable
       DISPLAY: ":99"
